--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "devDependencies": {
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "vite": "^6.2.4"
+        "laravel-vite-plugin": "^1.2.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
