--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "laravel-vite-plugin": "^1.2.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^44.3.0",
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.7",
