--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@ckeditor/ckeditor5-build-classic": "^44.3.0",
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@popperjs/core": "^2.11.8",
+        "aos": "^2.3.4",
         "bootstrap": "^5.3.7",
         "ckeditor5": "^46.0.0",
         "jquery": "^3.7.1",
