--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0"
+        "laravel-vite-plugin": "^1.2.0",
+        "vite": "^5.0.0"
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^44.3.0",
-        "@fortawesome/fontawesome-free": "^6.7.2",
-        "@popperjs/core": "^2.11.8",
-        "aos": "^2.3.4",
-        "bootstrap": "^5.3.7",
-        "ckeditor5": "^46.0.0",
-        "jquery": "^3.7.1",
-        "select2": "^4.1.0-rc.0"
+        "ckeditor5": "^46.0.0"
     }
 }
