--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "devDependencies": {
         "axios": "^1.8.2",
         "laravel-vite-plugin": "^1.2.0",
-        "vite": "^5.0.0"
+        "vite": "^6.3.5"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^44.3.0",
-        "ckeditor5": "^46.0.0"
+        "@ckeditor/ckeditor5-build-classic": "^44.3.0"
     }
 }
