--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ PHP_CLI_SERVER_WORKERS=4
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=single,discord
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -63,3 +63,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_DEV_SERVER_HOST=anphu.test
+
+CLOUDINARY_KEY=879353362644812
+CLOUDINARY_SECRET=GMqi45z4CO3MrN3lw-FKbsXyCGY
+CLOUDINARY_CLOUD_NAME=dbo46b0gf
+CLOUDINARY_URL=cloudinary://879353362644812:GMqi45z4CO3MrN3lw-FKbsXyCGY@dbo46b0gf
