--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,13 @@ DB_DATABASE=anphu
 DB_USERNAME=root
 DB_PASSWORD=
 
+# Docker
+# DB_HOST=db
+# DB_PORT=3306
+# DB_DATABASE=anphu
+# DB_USERNAME=laravel_user
+# DB_PASSWORD=laravel_password
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
